--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "lint": "yarn eslint '*.{js,ts,tsx}' --quiet --report-unused-disable-directives"
+    "lint": "yarn eslint '*.{js,ts,tsx}' --quiet --report-unused-disable-directives",
+    "ts": "yarn tsc",
+    "test": "yarn lint && yarn tsc"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.66",
