--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "test": "yarn lint && yarn tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.69",
-    "@docusaurus/preset-classic": "2.0.0-alpha.69",
+    "@docusaurus/core": "2.0.0-alpha.70",
+    "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@kiwicom/orbit-components": "^0.109.1",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "browserslist": {
     "production": [
@@ -36,9 +38,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.69",
     "@tsconfig/docusaurus": "^1.0.2",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
