--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "yarn lint && yarn tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@docusaurus/core": "2.0.0-beta.9",
+    "@docusaurus/preset-classic": "2.0.0-beta.9",
     "@kiwicom/orbit-components": "^0.109.1",
     "@kiwicom/orbit-design-tokens": "^0.13.2",
     "@mdx-js/react": "^1.6.21",
@@ -37,8 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-alpha.69",
-    "@tsconfig/docusaurus": "^1.0.2",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.9",
+    "@tsconfig/docusaurus": "^1.0.4",
     "@types/react": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
