--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.14",
-    "@docusaurus/preset-classic": "2.0.0-beta.759298296",
+    "@docusaurus/preset-classic": "2.0.0-beta.14",
     "@kiwicom/orbit-components": "^2.6.0",
     "@kiwicom/orbit-design-tokens": "^0.13.2",
     "@mdx-js/react": "^1.6.21",
