--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "lint": "yarn eslint '*.{js,ts,tsx}' '**/*.{js,ts,tsx}' --ignore-path .gitignore --quiet --report-unused-disable-directives"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.18",
-    "@docusaurus/preset-classic": "2.0.0-beta.18",
-    "@kiwicom/orbit-components": "^2.17.1",
-    "@kiwicom/orbit-design-tokens": "^1.3.1",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@kiwicom/orbit-components": "^4.2.0",
+    "@kiwicom/orbit-design-tokens": "^2.0.0",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^6.2.1",
     "clsx": "^1.1.1",
@@ -32,7 +32,7 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.18",
+    "@docusaurus/module-type-aliases": "2.2.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
